--- a/src/client/styles/signin.css
+++ b/src/client/styles/signin.css
@@ -1,161 +1,225 @@
-body {
-	font-family: Arial, sans-serif;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	background-color: var(--bg-color);
-	position: relative;
-	overflow: hidden; /* Ensure no overflow from trees */
-	transition: background-image 0.8s, opacity 0.5s ease; /* Smooth transitions */
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:"poppins",sans-serif;
+}
+body{
+    background-color:black;
+    /* background:linear-gradient(to right,#e2e2e2,#c9d6ff); */
+}
+.container{
+    background:#fff;
+    width:450px;
+    padding:1.5rem;
+    margin:50px auto;
+    border-radius:10px;
+    box-shadow:0 20px 35px rgba(0,0,1,0.9);
+}
+form{
+    margin:0 2rem;
+}
+.form-title{
+    font-size:1.5rem;
+    font-weight:bold;
+    text-align:center;
+    padding:1.3rem;
+    margin-bottom:0.4rem;
+}
+input{
+    color:inherit;
+    width:100%;
+    background-color:transparent;
+    border:none;
+    border-bottom:1px solid #757575;
+    padding-left:1.5rem;
+    font-size:15px;
+}
+.input-group{
+    padding:1% 0;
+    position:relative;
+ 
+}
+.input-group i{
+    position:absolute;
+    color:black;
+}
+input:focus{
+    background-color: transparent;
+    outline:transparent;
+    border-bottom:2px solid hsl(327,90%,28%);
+}
+input::placeholder{
+    color:transparent;
+}
+label{
+    color:#757575;
+    position:relative;
+    left:1.2em;
+    top:-1.3em;
+    cursor:auto;
+    transition:0.3s ease all;
+}
+input:focus~label,input:not(:placeholder-shown)~label{
+    top:-3em;
+    color:hsl(327,90%,28%);
+    font-size:15px;
+}
+.recover{
+    text-align:right;
+    font-size:1rem;
+    margin-bottom:1rem;
+ 
+}
+.recover a{
+    text-decoration:none;
+    color:#ec407a;
+}
+.recover a:hover{
+    color:blue;
+    text-decoration:underline;
+}
+button{
+    font-size:1.1rem;
+    padding:8px 0;
+    border-radius:5px;
+    outline:none;
+    border:none;
+    width:100%;
+    background:#ec407a;
+    color:white;
+    cursor:pointer;
+    transition:0.9s;
+}
+button:hover{
+    background:#07001f;
+}
+.or{
+    font-size:1.1rem;
+    margin-top:0.5rem;
+    text-align:center;
+}
+.icons{
+    text-align:center;
+}
+.icons i{
+    color:#ec407a;
+    padding:0.8rem 1.5rem;
+    border-radius:10px;
+    font-size:1.5rem;
+    cursor:pointer;
+    border:2px solid #dfe9f5;
+    margin:0 15px;
+    transition:1s;
+}
+.icons i:hover{
+    background:#07001f;
+    font-size:1.6rem;
+    border:2px solid #ec407a;
+}
+.links{
+    display:flex;
+    justify-content:space-around;
+    padding:0 4rem;
+    margin-top:0.9rem;
+    font-weight:bold;
+}
+#signUpButton, #signInButton{
+    color:#ec407a;
+    border:none;
+    background-color:transparent;
+    font-size:1rem;
+    font-weight:bold;
+}
+#signUpButton:hover, #signInButton:hover {
+    text-decoration:underline;
+    color:blue;
+} 
+.messageDiv{
+    background-color:hsl(327,90%,28%);
+    color:white;
+    padding:10px 20px;
+    margin:10px;
+    border-radius: 5px;
+    font-size:1rem;
+    opacity:0;
+    animation:fadeOut 7s forwards;
+ 
+}
+header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    padding: 10px 20px;
+    box-sizing: border-box;
+}
+header img {
+    height: 40px;
+}
+.dark-mode-toggle {
+    display: flex;
+    align-items: center;
 }
 
-.toggle-container {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	z-index: 1000;
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 34px;
+    height: 20px;
+    margin-top: 30px;
+    margin-right: 30px;
 }
 
-.toggle {
-	position: relative;
-	width: 60px;
-	height: 30px;
-	background-color: var(--toggle-bg-color);
-	border-radius: 15px;
-	display: flex;
-	align-items: center;
-	padding: 0 3px;
-	cursor: pointer;
-	transition: background-color 0.5s ease;
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
-.toggle-input {
-	display: none;
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
 }
 
-.toggle-label {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-	position: relative;
-	z-index: 2;
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 12px;
+    width: 12px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+input:checked + .slider {
+    background-color: #2196F3;
 }
 
-.toggle-handle {
-	position: absolute;
-	top: 1.5px;
-	left: 1.5px;
-	width: 27px;
-	height: 27px;
-	background-color: transparent;
-	border-radius: 50%;
-	transition: transform 0.3s ease-in-out;
-	z-index: 1;
-	background-image: url('../images/moon.png');
-	background-size: cover;
+input:checked + .slider:before {
+    transform: translateX(14px);
+}
+/* body.dark-mode {
+    background-color: rgb(194, 214, 214);
+    color: white;
 }
 
-.toggle-input:checked + .toggle-label .toggle-handle {
-	transform: translateX(24px);
-	background-image: url('../images/sun.png');
-	background-size: cover;
+header.dark-mode {
+    background-color: rgb(194, 214, 214);
+}
+.links .dark-mode {
+    color: black;
 }
 
-.main-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 20px;
-	position: relative;
-	z-index: 1; /* Ensure login box is above trees */
-	padding: 20px; /* Add padding to create space around content */
-	border-radius: 8px; /* Add border radius for rounded corners */
-	margin-right: 50px;
-}
-
-body.light-mode .main-container {
-	background-color: #f0f0f0; /* Light mode background color */
-}
-
-body.dark-mode .main-container {
-	background-color: #151515; /* Dark mode background color */
-}
-
-.login-container {
-	width: 300px;
-	height: auto;
-	position: relative;
-	z-index: 1; /* Ensure login box is above trees */
-}
-
-.login-box {
-	padding: 20px;
-}
-
-.login-title {
-	text-align: center;
-	margin-bottom: 20px;
-	font-size: 24px;
-	color: var(--text-color);
-}
-
-.input-group {
-	margin-bottom: 15px;
-}
-
-.input-group label {
-	display: block;
-	margin-bottom: 5px;
-	color: var(--text-color);
-}
-
-.input-group input {
-	width: 100%;
-	padding: 10px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	background-color: var(--input-bg-color);
-	color: var(--input-text-color);
-}
-
-.login-button {
-	width: 100%;
-	padding: 10px;
-	background-color: #ff0066;
-	color: #fff;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-	font-size: 16px;
-}
-
-.login-button:hover {
-	background-color: #be004c;
-}
-
-body.light-mode {
-	--bg-color: #c0c0c0;
-	--text-color: #333;
-	--input-bg-color: #fff;
-	--input-text-color: #333;
-	--toggle-bg-color: #707070;
-	background-image: url('../images/day.jpg'); /* Background for light mode */
-	background-size: cover; /* Ensure night image covers the entire background */
-	background-position: center; /* Center the background image */
-	opacity: 0.9;
-}
-
-body.dark-mode {
-	--bg-color: #333;
-	--text-color: #fff;
-	--input-bg-color: #555;
-	--input-text-color: #fff;
-	--toggle-bg-color: #fff673;
-	background-image: url('../images/night.jpg'); /* Background for dark mode */
-	background-size: cover; /* Ensure night image covers the entire background */
-	background-position: center; /* Center the background image */
-	opacity: 0.8;
-}
+#signIn .dark-mode {
+    display: none;
+} */
